# MiniNetWork

./: CMakeLists.txt  README.md  main.cpp
Eigen/src/Core/: IndexedView.h
Eigen/src/SparseCore/: SparseMatrix.h
Eigen/src/SuperLUSupport/: SuperLUSupport.h
include/: ActiveFunc.h  Batch.h  DataLoader.h  Matrix.cuh  Model.h  Nnw.h  Nnw.hpp  Onion.h  PreData.h
include/CudaKernel/: cudaFunc.cuh
include/Layer/: Conv.h  ConvLayer.h  Fc.h  FullconnectionLayer.h  Pool.h  PoolLayer.h  Relu.h  ReluLayer.h  Softmax.h  SoftmaxLayer.h  Start.h  StartLayer.h  View.h  ViewLayer.h  layer.h
include/Timer/: Timer.h  Timer.hpp
include/inl/: ConvLayer.hpp  FullconnectionLayer.hpp  Layer.hpp  PoolLayer.hpp  ReluLayer.hpp  SoftmaxLayer.hpp  StartLayer.hpp  ViewLayer.hpp
sources/: ActiveFunc.cpp  Conv.cpp  DataLoader.cpp  Matrix.cu  Nnw.cpp  Onion.cpp  Pool.cpp  PreData.cpp  Relu.cpp  Softmax.cpp  Start.cpp  View.cpp  cudaFunc.cu  fc.cpp  layer.cpp
